[tool.poetry]
name = "pdf-agent"
version = "0.1.0"
description = "pdf qa agent"
authors = ["ashwin8618 <ashwinnyalakonda@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pypdf = "^5.1.0"
langchain-community = "^0.3.7"
langchain-openai = "^0.2.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
